# gymcoach

./: .gitignore  Makefile  pyproject.toml  requirements-dev.txt  requirements.txt
app/api/: main.py
app/core/: config.py
app/db/: models.py  session.py
app/telegram/: bot.py
app/telegram/handlers/: onboarding.py  root.py
app/telegram/keyboards/: onboarding.py  reply.py
deploy/: Dockerfile  docker-compose.yml
test/: test_api_healthz.py
