[project]
name = "telegram-fitness-bot"
version = "0.1.0"
requires-python = ">=3.11"
description = "Step 0 skeleton for a Telegram fitness bot project (infra, tooling)"
readme = "README.md"
# Dependencies are managed via requirements.txt for simplicity in Step 0.

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app", "tests"]
extend-exclude = ["migrations"]
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "PIE", "RUF"]
ignore = ["E203"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true
plugins = []

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
pythonpath = ["app"]
